# QT_video_viewer

./: CMakeLists.txt  CMakeLists_cross_platform.txt  README.md  README_Windows.md  build.bat  build.sh  build_rpi.sh  build_simple.sh  code_guide.md  mainwindow.cpp  mainwindow.h  mqtt.cpp  video_client_functions.hpp  videoplayer.cpp  videoplayer.h
include/core/: video_client_functions.hpp
include/network/: mqtt.h
include/ui/: mainwindow.h
src/core/: main.cpp
src/network/: mqtt.cpp
src/ui/: mainwindow.cpp
src/video/: videoplayer.cpp
